# qr_cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
qr/: main.py
