[tool.poetry]
name = "qrcode_test"
version = "0.1.0"
description = "qrcode scanner and encoder"
authors = ["Alias <yygggg@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
pyzbar = "^0.1.9"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
qrcode = "^7.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
